<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_bestsell"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageview_product"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/icons"
        android:src="@drawable/perfume_bottle"/>


    <TextView
        android:id="@+id/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/imageview_product"
        android:text="@string/parada"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imageview_product"
        android:text="@string/candy"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageview_product"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/imageview_product"
        android:text="@string/_265_sr"
        android:textSize="12sp"
        tools:ignore="RelativeOverlap"/>

    <Button
        android:id="@+id/angry_btn"
        android:layout_width="60dp"

        android:layout_height="20dp"
        android:layout_alignParentEnd="true"

        android:layout_margin="20dp"
        android:background="@drawable/button_shape"

        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="12sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/imageview_product"
        android:layout_toEndOf="@+id/imageview_product"
        android:background="@color/cardview_shadow_start_color"
        />

    <ImageView
        android:id="@+id/imageview_product_one"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageview_product"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/icons"
        android:src="@drawable/perfume_bottle"/>


    <TextView
        android:id="@+id/textview_title_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageview_product"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/imageview_product_one"
        android:text="@string/parada"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_title_one"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imageview_product_one"
        android:text="@string/candy"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/text_price_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageview_product_one"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/imageview_product_one"
        android:text="@string/_265_sr"
        android:textSize="12sp"
        tools:ignore="RelativeOverlap"/>

    <Button
        android:id="@+id/angry_btn_one"
        android:layout_width="60dp"

        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/imageview_product"
        android:layout_margin="20dp"
        android:background="@drawable/button_shape"

        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="12sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/imageview_product_one"
        android:layout_toEndOf="@+id/imageview_product_one"
        android:background="@color/cardview_shadow_start_color"
        />
</RelativeLayout>