<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <android.support.v7.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity=""
            android:layout_weight="1"
            app:cardCornerRadius="3dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            >
            <!-- we can do the same thing with single text view but we do not have a optimized size of icon,
            so opting out this method -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/icons"
                    android:src="@drawable/lipstick_with_cover"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/makeup"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity=""
            android:layout_weight="1"
            app:cardCornerRadius="3dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/icons"
                    android:src="@drawable/skin_care"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skincare"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity=""
            android:layout_weight="1"
            app:cardCornerRadius="3dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/icons"
                    android:src="@drawable/beautytools"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/beauty_n_tools"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity=""
            android:layout_weight="1"
            app:cardCornerRadius="3dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/icons"
                    android:src="@drawable/lipstick_with_cover"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/home_n_fragrance"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity=""
            android:layout_weight="1"
            app:cardCornerRadius="3dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/icons"
                    android:src="@drawable/gift"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gift"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity=""
            android:layout_weight="1"
            app:cardCornerRadius="3dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/icons"
                    android:src="@drawable/men"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/men"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>