<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/layout_banner"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/image_one"
                    android:padding="20dp"
                    android:text="@string/bestseller"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="@android:color/black"
                    />

                <ImageView
                    android:id="@+id/image_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/icons"
                    android:padding="20dp"
                    android:src="@android:drawable/arrow_down_float"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_best"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/layout_bestsellers"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#d3d3d3">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/image_two"
                    android:padding="20dp"
                    android:text="@string/lips"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="@android:color/black"
                    />

                <ImageView
                    android:id="@+id/image_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/icons"
                    android:padding="20dp"
                    android:src="@android:drawable/arrow_down_float"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_lips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <include layout="@layout/layout_dropdown"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#d3d3d3">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/image_three"
                    android:padding="20dp"
                    android:text="@string/nails"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="@android:color/black"
                    />

                <ImageView
                    android:id="@+id/image_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/icons"
                    android:padding="20dp"
                    android:src="@android:drawable/arrow_up_float"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_nails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:visibility="gone">

                <include layout="@layout/layout_dropdown"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#d3d3d3">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/image_four"
                    android:padding="20dp"
                    android:text="@string/face"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="@android:color/black"
                    />

                <ImageView
                    android:id="@+id/image_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/icons"
                    android:padding="20dp"
                    android:src="@android:drawable/arrow_up_float"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_face"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:visibility="gone">

                <include layout="@layout/layout_dropdown"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#d3d3d3">

            </View>
        </LinearLayout>
    </ScrollView>

</LinearLayout>